data/derived/sp14/progs/unify/prog2520.ml.out
Characters 104-110:
  let fixpoint (f,b) = wwhile ((let whilesFun f' b' = let fOfB = f' (b') in (b' , b' = fOfB) in whilesFun (f, b)), b);;
                                                                                                          ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c
